base/frontend/frontend-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: k8s-example
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: brendanburns/journal-server:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        name: frontend
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - name: passwd-volume
            readOnly: true
            mountPath: "/etc/redis-passwd"
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Mi"
      #  livenessProbe:
      #    httpGet:
      #      port: 8080
      #      path: /api
      #    initialDelaySeconds: 60
      #  readinessProbe:
      #    httpGet:
      #      port: 8080
      #      path: /api
      #    initialDelaySeconds: 60
      volumes:
        - name: passwd-volume
          secret:
            secretName: redis-passwd
