base/frontend/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: k8s-example
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix      
        backend:
          serviceName: frontend
          servicePort: 8080
      # NOTE: this should come after /api or else it will hijack requestsi
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: my-nginx 
          servicePort: 80
